5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1806_2543.log
== TEST (2019-06-23 12:33:19) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 1
vs = ""
while(i<n):
	co = str(v[i])
	if(n-i > 0):
		vs = vs + co+"x^",n-1 " + "
	else:
		vs = vs + co
print(vs)		
	
	
-- ERROR:
File "XXXX", line 9
    vs = vs + co+"x^",n-1 " + "
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 12:33:59) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 1
vs = ""
while(i<n):
	co = str(v[i])
	if(n-i > 0):
		vs = vs + co+"x^",n-1, " + "
	else:
		vs = vs + co
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 12:34:38) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 1
vs = ""
while(i<n):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^",n-1, " + "
	else:
		vs = vs + co
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 12:36:02) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 1
vs = ""
while(i<n):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^",n-1, + " + "
	else:
		vs = vs + co
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 12:36:38) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 1
vs = ""
while(i<n):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs + co
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 12:37:10) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 1
vs = ""
while(i<n):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs + co
	i = i+1	
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 12:37:51) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
while(i<n):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs + co
	i = i+1	
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 12:38:29) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
while(i<n-1):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs + co
	i = i+1	
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 12:39:44) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
while(i<n-1):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs + str(ve[-1])
	i = i+1	
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:10:39) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
while(i<n-1):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs 
	i = i+1	
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:11:43) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
while(i<n):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs 
	i = i+1	
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:12:24) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
while(i<n):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs 
	i = i+1	
print(vs[0:-1])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:12:45) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
while(i<n):
	co = str(ve[i])
	if(n-i > 0):
		vs = vs + co+"x^ + "
	else:
		vs = vs 
	i = i+1	
print(vs[0:-5])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:15:17) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 1
vs = ""
exp = 0
while(i<n+1):
	co = str(ve[i])
	exp = n - i
	print(exp)
	if(n-i > 0):
		vs = vs + co+"x^ + "
	
print(vs[0:-5])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:18:12) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 1
vs = ""
exp = 0
while(i<n+1):
	co = str(ve[i])
	exp = n - i
	print(exp)
	if(n-i > 0):
		vs = vs + co+"x^ + "
	i = i+1
print(vs[0:-5])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:19:25) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	print(exp)
	if(n-i > 0):
		vs = vs + co+"x^ + "
	i = i+1
print(vs[0:-5])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:20:31) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 0):
		vs = vs + co+"x^ + "
	i = i+1
print(vs[0:-5])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:20:57) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 0):
		vs = vs + co+"x^ + "
	i = i+1
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:22:06) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 0):
		vs = vs + co+"x^",exp," + "
	i = i+1
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:23:52) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = str((n-1) - i)
	if(exp > 0):
		vs = vs + co+"x^"+ exp + " + "
	i = i+1
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:24:50) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 0):
		exp = str(exp)
		vs = vs + co+"x^"+ exp + " + "
	i = i+1
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:26:59) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 1):
		exp = str(exp)
		vs = vs + co+"x^"+ exp + " + "
	elif(exp > 0):	
		exp = str(exp)
		vs = vs + co+"x + "
	i = i+1
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:27:56) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 1):
		exp = str(exp)
		vs = vs + co+"x^"+ exp + " + "
	elif(exp > 0):	
		exp = str(exp)
		vs = vs + co+"x + "
	elif(exp == 0)	:
	vs = vs + co
	i = i+1
print(vs)		
	
	
-- ERROR:
File "XXXX", line 17
    vs = vs + co
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:28:05) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 1):
		exp = str(exp)
		vs = vs + co+"x^"+ exp + " + "
	elif(exp > 0):	
		exp = str(exp)
		vs = vs + co+"x + "
	elif(exp == 0)	:
		vs = vs + co
	i = i+1
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:28:26) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 1):
		exp = str(exp)
		vs = vs + co+"x^"+ exp + " + "
	elif(exp > 0):	
		exp = str(exp)
		vs = vs + co+"x + "
	elif(exp == 0)	:
		vs = vs + co
	i = i+1
print(vs)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 21:28:47) 
-- CODE:
from numpy import *
ve = array(eval(input("Digite os coeficientes da equacao: ")))
n = len(ve)
i = 0
vs = ""
exp = 0
while(i<n):
	co = str(ve[i])
	exp = (n-1) - i
	if(exp > 1):
		exp = str(exp)
		vs = vs + co+"x^"+ exp + " + "
	elif(exp > 0):	
		exp = str(exp)
		vs = vs + co+"x + "
	elif(exp == 0)	:
		vs = vs + co
	i = i+1
print(vs)		
	
	
-- EXECUTION TIME:
1.09512
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:
10
-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x + 2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
